<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/JoinButton"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_marginTop="204dp"
        android:text="@string/TextJoinButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartText" />

    <TextView
        android:id="@+id/StartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartText"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/CreateRoomButton"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:text="@string/TextCreateRoomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartText" />

</androidx.constraintlayout.widget.ConstraintLayout>