<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <TextView
        android:id="@+id/CreateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/TextCreateActivity"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ContinueButton"
        android:layout_width="268dp"
        android:layout_height="78dp"
        android:text="@string/ContinueButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateText"
        app:layout_constraintVertical_bias="0.872" />

    <TextView
        android:id="@+id/BackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pointer"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/CreateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <Button
        android:id="@+id/buttonForGenre"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Жанр"
        app:layout_constraintBottom_toTopOf="@+id/ContinueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateText"
        app:layout_constraintVertical_bias="0.328" />

    <TextView
        android:id="@+id/textViewForGenre"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:text="Жанр"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonForGenre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateText"
        app:layout_constraintVertical_bias="0.716" />

    <Button
        android:id="@+id/buttonForYear"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Год"
        app:layout_constraintBottom_toTopOf="@+id/ContinueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForGenre"
        app:layout_constraintVertical_bias="0.684" />

    <TextView
        android:id="@+id/textViewForYear"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:text="Год"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonForYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForGenre" />

</androidx.constraintlayout.widget.ConstraintLayout>